# backend/docs/swagger.json
@@ -155,19 +155,19 @@
                     "400": {
                         "description": "잘못된 쿼리 파라미터",
                         "schema": {
-                            "$ref": "#/definitions/handler.Response"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "인증 토큰 누락 또는 유효하지 않음",
                         "schema": {
-                            "$ref": "#/definitions/handler.Response"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "서버 내부 에러",
                         "schema": {
-                            "$ref": "#/definitions/handler.Response"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -304,6 +304,17 @@
                 "details": {},
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "$ref": "#/definitions/dto.ErrorInfo"
+                },
+                "success": {
+                    "type": "boolean"
                 }
             }
         },
